[package]
name = "veracrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0.31"
binrw = "0.8.4"
pbkdf2 = { version = "0.11.0", default-features = false }
hmac = "0.12.1"
sha2 = "0.10.2"
aes = "0.8.1"
xts-mode = "0.5.0"
crc = "3.0.0"
fatfs = "0.3.5"
fscommon = "0.1.1"
